fix overflow in mobile screens

--- a/style.css
+++ b/style.css
@@ -86,8 +86,8 @@ nav ul li a {
 
 @media screen and (max-width: 768px) {
 
-  main {
-    overflow: hidden;
+  body {
+    overflow: hidden !important;
   }
 
   .toggler {
